# openplan

./: .gitignore  CMakeLists.txt  README.md  op-sample-parser.cpp  op-sample1.json
docs/: NOTES.md
include/openplan/: openplan.h
lib/: CMakeLists.txt
lib/openplan/: CMakeLists.txt  draw.cpp  op-sample-parser.cpp  parser.cpp
src/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt  draw-tests.cpp  example_test.cpp  parser-tests.cpp
test/data/: plan2.json  plan3.json  plan4.json  plan5.osm  plan6.osm
